// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`styled function > Snapshot tests > basic usage should match snapshot 1`] = `
"
.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return React.createElement(\\"div\\", {
    ...props,
    className: combinedClassName
  });
};
function App() {
  return /*#__PURE__*/React.createElement(Box, null, \\"test\\");
}
"
`;

exports[`styled function > Snapshot tests > using pseudo elements should match snapshot 1`] = `
"
.kuma-2631981251{padding:2px;}.kuma-2631981251:after{color:blue;}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return React.createElement(\\"div\\", {
    ...props,
    className: combinedClassName
  });
};
function App() {
  return /*#__PURE__*/React.createElement(Box, {
    className: [\\"kuma-2631981251\\"].join(\\" \\")
  }, \\"test\\");
}
"
`;

exports[`styled function > Snapshot tests > using pseudo props should match snapshot 1`] = `
"
.kuma-2131929892{padding:2px;}.kuma-2131929892:hover{color:red;}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return React.createElement(\\"span\\", {
    ...props,
    className: combinedClassName
  });
};
function App() {
  return /*#__PURE__*/React.createElement(Box, {
    className: [\\"kuma-2131929892\\"].join(\\" \\")
  }, \\"test\\");
}
"
`;

exports[`styled function > Snapshot tests > using responsive props should match snapshot 1`] = `
"
.kuma-401969115{font-size:16px;}@media (min-width:576px){.kuma-401969115{font-size:24px;}}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return React.createElement(\\"a\\", {
    ...props,
    className: combinedClassName
  });
};
function App() {
  return /*#__PURE__*/React.createElement(Box, {
    className: [\\"kuma-401969115\\"].join(\\" \\")
  }, \\"test\\");
}
"
`;

exports[`styled function > Snapshot tests > using space props should match snapshot 1`] = `
"
.kuma-3206633536{padding:2px;}.kuma-686274543{position:relative;width:300px;height:300px;background-color:rgba(255, 0, 0, 0.5);}.kuma-686274543:hover{background-color:rgba(0, 0, 255, 0.5);}@media (max-width: 768px){.kuma-686274543{flex-direction:column;}}

import React from \\"react\\";
import { styled } from '@kuma-ui/core';
const Box = props => {
  const existingClassName = props.className || \\"\\";
  const newClassName = \\"kuma-686274543\\";
  const combinedClassName = [existingClassName, newClassName].filter(Boolean).join(\\" \\");
  return React.createElement(\\"div\\", {
    ...props,
    className: combinedClassName
  });
};
function App() {
  return /*#__PURE__*/React.createElement(Box, {
    className: [\\"kuma-3206633536\\"].join(\\" \\")
  }, \\"test\\");
}
"
`;
